--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ibm-i-acs-tools",
 	"displayName": "IBM i ACS Tools",
 	"description": "Connect to IBM i ACS tools",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"author": {
 		"name": "Matt Tyler",
 		"url": "https://github.com/m-tyler/"
@@ -66,7 +66,7 @@
 				"ibm-i-acs.acsbinary": {
 					"type": "string",
 					"default": "",
-					"description": "Absolute path and name for the IBM i Access Client Solution (ACS) executable. Specify the jar bundle or the Windows binary .EXE start up program"
+					"description": "Absolute path and name for the IBM i Access Client Solution (ACS) executable. Specify the jar bundle or the Windows binary .EXE start up program. place paths with spaces between double quote characters (tested on Windows only)."
 				}
 			}
 		},
